# trapezoidal_motion_planner

./: CMakeLists.txt  README.md  package.xml
cmake/: trapezoidal_motion_plannerConfig.cmake.in
docs/: README.md  test-results.md
include/trapezoidal_motion_planner/: TrapezoidalMotionPlanner.hpp
src/: TrapezoidalMotionPlanner.cpp
test/: CMakeLists.txt
test/planner_tests/: CMakeLists.txt  README.md
test/planner_tests/include/: Defines.hpp  MockSystems.hpp
test/planner_tests/py/: plot_tg.py
test/planner_tests/src/: MockSystems.cpp  TrapezoidalMotionPlannerTest.cpp
